--- a/code.ipynb
+++ b/code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,8 @@
     "    text = re.sub(r'(?<=[A-Za-z])<', 'ch', text)\n",
     "    text = re.sub(r'(?<=[A-Za-z])>', 'ck', text)\n",
     "    text = (text.replace(\"ic)\", \"ich\")\n",
-    "                .replace(\"nac)\", \"nach\")\n",
+    "                .replace(\"auc)\", \"auch\")\n",
+    "                .replace(\"nac)\", \"nach\")               \n",
     "                .replace(\"aud)\", \"auch\")\n",
     "                .replace(\"Jh\", \"Ich\")\n",
     "                .replace(\"IJ)\", \"Ich\")\n",
@@ -724,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
