--- a/code.ipynb
+++ b/code.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Daten werden als jpg importiert"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -665,8 +672,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grundstruktur von den XML-Dateien "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +905,240 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### NER-Erkennung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "import os\n",
+    "import re\n",
+    "from lxml import etree as ET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modell erfolgreich geladen von spacy_train_v1/output/model-best\n"
+     ]
+    }
+   ],
+   "source": [
+    "# spaCy-Modell importieren\n",
+    "try:\n",
+    "    model_path = \"spacy_train_v1/output/model-best\"  # Pfad zum gespeicherten Modell\n",
+    "    ner_model = spacy.load(model_path)\n",
+    "    print(f\"Modell erfolgreich geladen von {model_path}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Fehler beim Laden des Modells: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Daten importieren\n",
+    "input_dir = 'data/xml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    # Entferne Punkte direkt nach Zahlen (z.B. \"1.\" → \"1\")\n",
+    "    text = re.sub(r'(?<=\\d)\\.(?=\\s|$)', '', text)\n",
+    "    return text.strip()\n",
+    "\n",
+    "def append_text(elem, text):\n",
+    "    if elem.text:\n",
+    "        elem.text += text\n",
+    "    else:\n",
+    "        elem.text = text\n",
+    "\n",
+    "def mark_entities_et(p_elem, ner_model):\n",
+    "    if p_elem.text is None and len(p_elem) == 0:\n",
+    "        return\n",
+    "\n",
+    "    # Ursprünglichen Text extrahieren\n",
+    "    full_text = \"\".join(p_elem.itertext())\n",
+    "    cleaned_text = clean_text(full_text)\n",
+    "\n",
+    "    # Element leeren\n",
+    "    p_elem.clear()\n",
+    "\n",
+    "    # Sätze splitten\n",
+    "    sentences = [s.strip() for s in cleaned_text.split('. ') if s.strip()]\n",
+    "\n",
+    "    for sentence in sentences:\n",
+    "        doc = ner_model(sentence)\n",
+    "        ents = [ent for ent in doc.ents if ent.label_ in {\"PER\", \"LOC\", \"DATE\"}]\n",
+    "\n",
+    "        # Kein NER-Treffer: Satz einfach als Text anhängen\n",
+    "        if not ents:\n",
+    "            append_text(p_elem, sentence + \". \")\n",
+    "            continue\n",
+    "\n",
+    "        # Satz mit <s>-Tag\n",
+    "        s_elem = ET.Element(\"s\")\n",
+    "        last_idx = 0\n",
+    "\n",
+    "        for ent in ents:\n",
+    "            # Text vor Entität\n",
+    "            if ent.start_char > last_idx:\n",
+    "                append_text(s_elem, sentence[last_idx:ent.start_char])\n",
+    "\n",
+    "            # Entität mit passendem Tag\n",
+    "            tag = {\"PER\": \"persName\", \"LOC\": \"placeName\", \"DATE\": \"date\"}[ent.label_]\n",
+    "            ent_elem = ET.Element(tag)\n",
+    "            ent_elem.text = ent.text\n",
+    "            s_elem.append(ent_elem)\n",
+    "\n",
+    "            last_idx = ent.end_char\n",
+    "\n",
+    "        # Text nach letzter Entität\n",
+    "        if last_idx < len(sentence):\n",
+    "            append_text(s_elem, sentence[last_idx:])\n",
+    "\n",
+    "        # Punkt am Satzende\n",
+    "        append_text(s_elem, \". \")\n",
+    "\n",
+    "        # <s>-Element an Absatz anhängen\n",
+    "        p_elem.append(s_elem)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def append_text(parent, text):\n",
+    "    \"\"\"Hilfsfunktion: hängt Text an letztes Element oder Parent\"\"\"\n",
+    "    if len(parent) > 0:\n",
+    "        # Hänge an tail des letzten Elements an\n",
+    "        if parent[-1].tail:\n",
+    "            parent[-1].tail += text\n",
+    "        else:\n",
+    "            parent[-1].tail = text\n",
+    "    else:\n",
+    "        # Hänge direkt an text des Elternelements\n",
+    "        if parent.text:\n",
+    "            parent.text += text\n",
+    "        else:\n",
+    "            parent.text = text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XML-Datei wurde aktualisiert: data/xml/1893_Bonatz_J_A.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1856_Lemmerz_J.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1820_Schulz_Johann_Gottlieb.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1836_Küster_Johann_Adolph.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1847_Schmitt_J_H.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1859_Fritsch_Johannes.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1851_Kölbing_Friedrich.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1866_Nauhaus_Carl.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1862_Schulz_J_B.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1855_Hoffmann_M_E.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1862_Lemmerz_A.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1889_Wedemann_J_F.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1830_Bonatz_J_G.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1861_Kölbing_C_R.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1884_Stuhl_S_E.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1875_Breutel_J_C.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1860_Suhl_D_W.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1855_Stein_J_J_F.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1849_Hoffman_Johannes_Friedrich.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1862_Beck_J_C.xml\n",
+      "XML-Datei wurde aktualisiert: data/xml/1823_Bonatz_Johanna.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Namespace-Map für TEI\n",
+    "ns = {'tei': 'http://www.tei-c.org/ns/1.0'}\n",
+    "\n",
+    "input_dir = 'data/xml'\n",
+    "\n",
+    "# Durch alle XML-Dateien im Eingabeverzeichnis iterieren\n",
+    "for filename in os.listdir(input_dir):\n",
+    "    if filename.endswith(\".xml\"):\n",
+    "        file_path = os.path.join(input_dir, filename)\n",
+    "\n",
+    "        try:\n",
+    "            # Lade das XML mit lxml-PARSER\n",
+    "            parser = ET.XMLParser(remove_blank_text=True)\n",
+    "            tree = ET.parse(file_path, parser)\n",
+    "            root = tree.getroot()\n",
+    "\n",
+    "            # Alle <p>-Elemente finden (inkl. Namespace)\n",
+    "            p_elems = root.xpath('.//tei:text//tei:p', namespaces=ns)\n",
+    "            for p in p_elems:\n",
+    "                mark_entities_et(p, ner_model)  # ← Deine NER-Funktion\n",
+    "\n",
+    "            # XML-Datei **überschreiben** mit schön formatiertem XML\n",
+    "            tree.write(file_path, encoding='utf-8', pretty_print=True, xml_declaration=True)\n",
+    "            print(f\"XML-Datei wurde aktualisiert: {file_path}\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Fehler beim Verarbeiten der Datei {filename}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Relation-Erkennung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daten vorbereiten "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Relation erkennen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daten anreichnern "
    ]
   },
   {
@@ -905,7 +1152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WikiData \n"
+    "## Graphen in WikiData importieren\n"
    ]
   }
  ],
