--- a/code.ipynb
+++ b/code.ipynb
@@ -1121,17 +1121,447 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Extraktion der erwähnten Personen-, Organisations- und Ortsnamen "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import re\n",
+    "from lxml import etree as ET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Namespace muss außerhalb des Imports definiert werden\n",
+    "ns = {'tei': 'http://www.tei-c.org/ns/1.0'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dir = 'data/xml_kor'\n",
+    "output_file = 'data/json/erwähnte_NER.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funktion zum Säubern der Texte (Zeilenumbrüche, Leerzeichen etc.)\n",
+    "def clean_text(text):\n",
+    "    if not text:\n",
+    "        return ''\n",
+    "    text = re.sub(r'\\s+', ' ', text)  # mehrere Whitespaces durch ein Leerzeichen ersetzen\n",
+    "    return text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ergebnisse wurden in data/json/erwähnte_NER.json gespeichert.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for filename in os.listdir(input_dir):\n",
+    "    if filename.endswith(\".xml\"):\n",
+    "        file_path = os.path.join(input_dir, filename)\n",
+    "\n",
+    "        try:\n",
+    "            parser = ET.XMLParser(remove_blank_text=True)\n",
+    "            tree = ET.parse(file_path, parser)\n",
+    "            root = tree.getroot()\n",
+    "            \n",
+    "            # Autor extrahieren (nur erster Autor oder leere Zeichenkette)\n",
+    "            author_element = root.xpath('.//tei:teiHeader//tei:author', namespaces=ns)\n",
+    "            autor = ''\n",
+    "            if author_element and author_element[0].text:\n",
+    "                autor = clean_text(author_element[0].text)\n",
+    "\n",
+    "            p_elems = root.xpath('.//tei:text//tei:p', namespaces=ns)\n",
+    "\n",
+    "            personen = set()\n",
+    "            orte = set()\n",
+    "            organisationen = set()\n",
+    "\n",
+    "            for p in p_elems:\n",
+    "                pers_names = p.xpath('.//tei:persName[not(ancestor::tei:s)]', namespaces=ns)\n",
+    "                org_names = p.xpath('.//tei:orgName[not(ancestor::tei:s)]', namespaces=ns)\n",
+    "                place_names = p.xpath('.//tei:placeName[not(ancestor::tei:s)]', namespaces=ns)\n",
+    "\n",
+    "                for pn in pers_names:\n",
+    "                    if pn.text:\n",
+    "                        personen.add(clean_text(pn.text))\n",
+    "\n",
+    "                for on in org_names:\n",
+    "                    if on.text:\n",
+    "                        organisationen.add(clean_text(on.text))\n",
+    "\n",
+    "                for pln in place_names:\n",
+    "                    if pln.text:\n",
+    "                        orte.add(clean_text(pln.text))\n",
+    "\n",
+    "            result = {\n",
+    "                \"datei\": filename,\n",
+    "                \"autor\": autor,\n",
+    "                \"personen\": sorted(list(personen)),\n",
+    "                \"orte\": sorted(list(orte)),\n",
+    "                \"organisationen\": sorted(list(organisationen))\n",
+    "            }\n",
+    "\n",
+    "            all_results.append(result)\n",
+    "\n",
+    "        except ET.XMLSyntaxError as e:\n",
+    "            print(f\"Fehler beim Parsen von {filename}: {e}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Anderer Fehler bei {filename}: {e}\")\n",
+    "\n",
+    "# Sicherstellen, dass das Ausgabe-Verzeichnis existiert\n",
+    "os.makedirs(os.path.dirname(output_file), exist_ok=True)\n",
+    "\n",
+    "# Schreibe alles in eine JSON-Datei\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(all_results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(f\"Ergebnisse wurden in {output_file} gespeichert.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sätzenextraktion "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import re\n",
+    "from lxml import etree as ET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pfade\n",
+    "input_dir = 'data/xml_kor'\n",
+    "output_file = 'data/json/sätze.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XML-Namespaces\n",
+    "ns = {'tei': 'http://www.tei-c.org/ns/1.0'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funktion zur Textbereinigung\n",
+    "def clean_text(text):\n",
+    "    if not text:\n",
+    "        return ''\n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
+    "    return text.strip()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_results = []\n",
+    "\n",
+    "# Alle XML-Dateien im Verzeichnis durchgehen\n",
+    "for filename in os.listdir(input_dir):\n",
+    "    if filename.endswith(\".xml\"):\n",
+    "        file_path = os.path.join(input_dir, filename)\n",
+    "\n",
+    "        try:\n",
+    "            parser = ET.XMLParser(remove_blank_text=True)\n",
+    "            tree = ET.parse(file_path, parser)\n",
+    "            root = tree.getroot()\n",
+    "\n",
+    "            # Metadaten: Autor und Referenz\n",
+    "            author_element = root.xpath('.//tei:teiHeader//tei:author', namespaces=ns)\n",
+    "            autor = clean_text(author_element[0].text) if author_element and author_element[0].text else ''\n",
+    "\n",
+    "            ref_element = root.xpath('.//tei:teiHeader//tei:ref', namespaces=ns)\n",
+    "            ref = clean_text(ref_element[0].text) if ref_element and ref_element[0].text else ''\n",
+    "\n",
+    "            # HEADS verarbeiten\n",
+    "            head_elements = root.xpath('.//tei:text//tei:head', namespaces=ns)\n",
+    "            for head in head_elements:\n",
+    "                head_text = clean_text(''.join(head.itertext()))\n",
+    "\n",
+    "                head_personen = set()\n",
+    "                head_organisationen = set()\n",
+    "                head_orte = set()\n",
+    "                head_date = set()\n",
+    "\n",
+    "                for pn in head.xpath('.//tei:persName', namespaces=ns):\n",
+    "                    if pn.text:\n",
+    "                        head_personen.add(clean_text(pn.text))\n",
+    "                for on in head.xpath('.//tei:orgName', namespaces=ns):\n",
+    "                    if on.text:\n",
+    "                        head_organisationen.add(clean_text(on.text))\n",
+    "                for pln in head.xpath('.//tei:placeName', namespaces=ns):\n",
+    "                    if pln.text:\n",
+    "                        head_orte.add(clean_text(pln.text))\n",
+    "                for dt in head.xpath('.//tei:date', namespaces=ns):\n",
+    "                    if dt.text:\n",
+    "                        head_date.add(clean_text(dt.text))\n",
+    "\n",
+    "                result = {\n",
+    "                    \"text\": head_text,\n",
+    "                    \"datei\": filename,\n",
+    "                    \"autor\": autor,\n",
+    "                    \"ref\": ref,\n",
+    "                    \"personen\": sorted(head_personen),\n",
+    "                    \"orte\": sorted(head_orte),\n",
+    "                    \"organisationen\": sorted(head_organisationen),\n",
+    "                    \"date\": sorted(head_date)\n",
+    "                }\n",
+    "                all_results.append(result)\n",
+    "\n",
+    "            # SÄTZE (s-Tags) verarbeiten\n",
+    "            s_elements = root.xpath('.//tei:text//tei:s', namespaces=ns)\n",
+    "            for s in s_elements:\n",
+    "                s_text = clean_text(''.join(s.itertext()))\n",
+    "\n",
+    "                s_personen = set()\n",
+    "                s_organisationen = set()\n",
+    "                s_orte = set()\n",
+    "                s_date = set()\n",
+    "\n",
+    "                for pn in s.xpath('.//tei:persName', namespaces=ns):\n",
+    "                    if pn.text:\n",
+    "                        s_personen.add(clean_text(pn.text))\n",
+    "                for on in s.xpath('.//tei:orgName', namespaces=ns):\n",
+    "                    if on.text:\n",
+    "                        s_organisationen.add(clean_text(on.text))\n",
+    "                for pln in s.xpath('.//tei:placeName', namespaces=ns):\n",
+    "                    if pln.text:\n",
+    "                        s_orte.add(clean_text(pln.text))\n",
+    "                for dt in s.xpath('.//tei:date', namespaces=ns):\n",
+    "                    if dt.text:\n",
+    "                        s_date.add(clean_text(dt.text))\n",
+    "\n",
+    "                result = {\n",
+    "                    \"text\": s_text,\n",
+    "                    \"datei\": filename,\n",
+    "                    \"autor\": autor,\n",
+    "                    \"ref\": ref,\n",
+    "                    \"personen\": sorted(s_personen),\n",
+    "                    \"orte\": sorted(s_orte),\n",
+    "                    \"organisationen\": sorted(s_organisationen),\n",
+    "                    \"date\": sorted(s_date)\n",
+    "                }\n",
+    "                all_results.append(result)\n",
+    "\n",
+    "        except ET.XMLSyntaxError as e:\n",
+    "            print(f\"Fehler beim Parsen von {filename}: {e}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Anderer Fehler bei {filename}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ergebnisse wurden in data/json/sätze.json gespeichert.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sicherstellen, dass das Ausgabe-Verzeichnis existiert\n",
+    "os.makedirs(os.path.dirname(output_file), exist_ok=True)\n",
+    "\n",
+    "# Ergebnisse als JSON speichern\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(all_results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(f\"Ergebnisse wurden in {output_file} gespeichert.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Relation erkennen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pydantic import BaseModel, Field\n",
+    "from langchain.chat_models import ChatOllama\n",
+    "from langchain.prompts import PromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate, ChatPromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.output_parsers import PydanticOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Neue Entity- und Relationstypen\n",
+    "entity_types = ['person', 'location', 'organization', 'date']\n",
+    "relation_types = [\n",
+    "    \"geboren_am\", \"geboren_in\",\n",
+    "    \"gestorben_am\", \"gestorben_in\", \"begraben_in\",\n",
+    "    \"wohnhaft_in\", \"lebte_in\", \"wirkte_in\",\n",
+    "    \"ausgebildet_in\", \"studierte_an\",\n",
+    "    \"war\", \"beschäftigt_bei\", \"mitglied_von\",\n",
+    "    \"verheiratet_mit\", \"kind_von\", \"eltern_von\", \"geschwister_von\",\n",
+    "    \"getauft_am\", \"beigetreten_am\",\n",
+    "    \"interessiert_sich_für\", \"beschäftigt_sich_mit\", \"forscht_zu\",\n",
+    "    \"schreibt_über\", \"unterrichtet_in\",\n",
+    "    \"gereist_nach\", \"besucht\", \"angekommen_in\", \"abgereist_aus\",\n",
+    "    \"aufgehalten_in\", \"zurückgekehrt_nach\", \"verließ\", \"war_in\", \"war_am\", \"gefahren_nach\",\n",
+    "    \"war_eingeschult\"\n",
+    "]\n",
+    "\n",
+    "# Pydantic Modell\n",
+    "class ExtractedInfo(BaseModel):\n",
+    "    head: str = Field(description=\"extrahierte Kopf-Entität, z.B. Daniel Wilhelm Suhl\")\n",
+    "    head_type: str = Field(description=\"Typ der Kopf-Entität, z.B. person\")\n",
+    "    relation: str = Field(description=\"Beziehung zwischen Kopf und Schwanz\")\n",
+    "    tail: str = Field(description=\"extrahierte Schwanz-Entität, z.B. Gnadenthal, 30 April 1858\")\n",
+    "    tail_type: str = Field(description=\"Typ der Schwanz-Entität, z.B. location, date\")\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=ExtractedInfo)\n",
+    "\n",
+    "# System-Prompt (angepasst)\n",
+    "system_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "Du arbeitest mit biographischen, historischen und religiösen Texten der Herrnhuter Brüdergemeine.\n",
+    "Deine Aufgabe ist es, Relationen zwischen Personen, Orten, Organisationen und Daten zu extrahieren.\n",
+    "\n",
+    "Gib ausschließlich eine JSON-Liste mit Objekten zurück. Jedes Objekt enthält:\n",
+    "- \"head\", \"head_type\", \"relation\", \"tail\", \"tail_type\".\n",
+    "\n",
+    "Die erlaubten Entitätstypen sind: {entity_types}\n",
+    "Die erlaubten Beziehungstypen sind: {relation_types}\n",
+    "\n",
+    "KEINE Erklärungen oder zusätzlichen Texte!\n",
+    "\"\"\",\n",
+    "    input_variables=[\"entity_types\", \"relation_types\"]\n",
+    ")\n",
+    "system_message_prompt = SystemMessagePromptTemplate(prompt=system_prompt)\n",
+    "\n",
+    "# Human Prompt mit bekannten Entitäten\n",
+    "human_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "Hier ist ein Satz aus einem historischen Lebenslauf:\n",
+    "\"{text}\"\n",
+    "\n",
+    "Folgende Entitäten sind im Satz enthalten:\n",
+    "PERSON: {PERSON}\n",
+    "LOC: {LOC}\n",
+    "DATE: {DATE}\n",
+    "ORG: {ORG}\n",
+    "\n",
+    "Nutze nur die angegebenen Entitäten. Finde sinnvolle Relationen zwischen diesen Entitäten, z. B. wann und wo jemand geboren oder gestorben ist, wo jemand lebte oder tätig war.\n",
+    "\n",
+    "{format_instructions}\n",
+    "\"\"\",\n",
+    "    input_variables=[\"text\", \"PERSON\", \"LOC\", \"DATE\", \"ORG\"],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
+    ")\n",
+    "human_message_prompt = HumanMessagePromptTemplate(prompt=human_prompt)\n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([system_message_prompt, human_message_prompt])\n",
+    "model = ChatOllama(model=\"llama3\", temperature=0)\n",
+    "chain = LLMChain(llm=model, prompt=chat_prompt)\n",
+    "\n",
+    "# Lade JSON-Datei mit den annotierten Sätzen\n",
+    "with open(\"relevant_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    input_data = json.load(f)\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "# Extraktion durchführen\n",
+    "for entry in input_data:\n",
+    "    result = chain.run(\n",
+    "        entity_types=entity_types,\n",
+    "        relation_types=relation_types,\n",
+    "        text=entry[\"Satz\"],\n",
+    "        PERSON=\", \".join(entry.get(\"PERSON\", [])),\n",
+    "        LOC=\", \".join(entry.get(\"LOC\", [])),\n",
+    "        DATE=\", \".join(entry.get(\"DATE\", [])),\n",
+    "        ORG=\", \".join(entry.get(\"ORG\", []))\n",
+    "    )\n",
+    "    results.append({\n",
+    "        \"input\": entry,\n",
+    "        \"extracted_relations\": result\n",
+    "    })\n",
+    "\n",
+    "# Speichern der Ergebnisse\n",
+    "with open(\"extrahierte_relationen.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(\"Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\")\n"
    ]
   },
   {
