--- a/code.ipynb
+++ b/code.ipynb
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,13 +1363,13 @@
     "\n",
     "                result = {\n",
     "                    \"text\": head_text,\n",
-    "                    \"datei\": filename,\n",
-    "                    \"autor\": autor,\n",
-    "                    \"ref\": ref,\n",
     "                    \"personen\": sorted(head_personen),\n",
     "                    \"orte\": sorted(head_orte),\n",
     "                    \"organisationen\": sorted(head_organisationen),\n",
-    "                    \"date\": sorted(head_date)\n",
+    "                    \"date\": sorted(head_date),\n",
+    "                    \"datei\": filename,\n",
+    "                    \"autor\": autor,\n",
+    "                    \"ref\": ref\n",
     "                }\n",
     "                all_results.append(result)\n",
     "\n",
@@ -1398,13 +1398,13 @@
     "\n",
     "                result = {\n",
     "                    \"text\": s_text,\n",
-    "                    \"datei\": filename,\n",
-    "                    \"autor\": autor,\n",
-    "                    \"ref\": ref,\n",
     "                    \"personen\": sorted(s_personen),\n",
     "                    \"orte\": sorted(s_orte),\n",
     "                    \"organisationen\": sorted(s_organisationen),\n",
-    "                    \"date\": sorted(s_date)\n",
+    "                    \"date\": sorted(s_date),\n",
+    "                    \"datei\": filename,\n",
+    "                    \"autor\": autor,\n",
+    "                    \"ref\": ref\n",
     "                }\n",
     "                all_results.append(result)\n",
     "\n",
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
