--- a/code.ipynb
+++ b/code.ipynb
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,15 +1480,45 @@
     "    \"gereist_nach\", \"besucht\", \"angekommen_in\", \"abgereist_aus\",\n",
     "    \"aufgehalten_in\", \"zurückgekehrt_nach\", \"verließ\", \"war_in\", \"war_am\", \"gefahren_nach\",\n",
     "    \"war_eingeschult\"\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Pydantic Modell\n",
     "class ExtractedInfo(BaseModel):\n",
-    "    head: str = Field(description=\"extrahierte Kopf-Entität, z.B. Daniel Wilhelm Suhl\")\n",
-    "    head_type: str = Field(description=\"Typ der Kopf-Entität, z.B. person\")\n",
-    "    relation: str = Field(description=\"Beziehung zwischen Kopf und Schwanz\")\n",
-    "    tail: str = Field(description=\"extrahierte Schwanz-Entität, z.B. Gnadenthal, 30 April 1858\")\n",
-    "    tail_type: str = Field(description=\"Typ der Schwanz-Entität, z.B. location, date\")\n",
+    "    subjekt: str = Field(description=\"extrahierte Subjekt-Entität, z.B. Daniel Wilhelm Suhl, ich, er, wir, meine l. Frau, seliger Bruder\")\n",
+    "    subjekt_type: str = Field(description=\"Typ der Subjekt-Entität, z.B. person\")\n",
+    "    prädikat: str = Field(description=\"Beziehung zwischen Subjekt und Objekt\")\n",
+    "    objekt: str = Field(description=\"extrahierte Objekt-Entität, z.B. Gnadenthal, 30 April 1858, Aelteſten - Conferenz\",)\n",
+    "    objekt_type: str = Field(description=\"Typ der Objekt-Entität, z.B. location, date, organisation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:43: LangChainDeprecationWarning: The class `ChatOllama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import ChatOllama``.\n",
+      "  model = ChatOllama(model=\"llama3\", temperature=0)\n",
+      "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:44: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  chain = LLMChain(llm=model, prompt=chat_prompt)\n",
+      "/var/folders/8w/sdx03mds5snd4v7gfh2rksz00000gn/T/ipykernel_30620/1106532232.py:54: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  result = chain.run(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
     "\n",
     "parser = PydanticOutputParser(pydantic_object=ExtractedInfo)\n",
     "\n",
@@ -1499,7 +1529,7 @@
     "Deine Aufgabe ist es, Relationen zwischen Personen, Orten, Organisationen und Daten zu extrahieren.\n",
     "\n",
     "Gib ausschließlich eine JSON-Liste mit Objekten zurück. Jedes Objekt enthält:\n",
-    "- \"head\", \"head_type\", \"relation\", \"tail\", \"tail_type\".\n",
+    "- \"subjekt\", \"subjekt_type\", \"prädikat\", \"objekt\", \"objekt_type\".\n",
     "\n",
     "Die erlaubten Entitätstypen sind: {entity_types}\n",
     "Die erlaubten Beziehungstypen sind: {relation_types}\n",
@@ -1517,16 +1547,16 @@
     "\"{text}\"\n",
     "\n",
     "Folgende Entitäten sind im Satz enthalten:\n",
-    "PERSON: {PERSON}\n",
-    "LOC: {LOC}\n",
-    "DATE: {DATE}\n",
-    "ORG: {ORG}\n",
+    "personen: {personen}\n",
+    "orte: {orte}\n",
+    "date: {date}\n",
+    "organisationen: {organisationen}\n",
     "\n",
-    "Nutze nur die angegebenen Entitäten. Finde sinnvolle Relationen zwischen diesen Entitäten, z. B. wann und wo jemand geboren oder gestorben ist, wo jemand lebte oder tätig war.\n",
+    "Nutze nur die angegebenen Entitäten. Finde sinnvolle Relationen zwischen diesen Entitäten, z. B. wann und wo jemand geboren oder gestorben ist, wo jemand lebte oder tätig war.\n",
     "\n",
     "{format_instructions}\n",
     "\"\"\",\n",
-    "    input_variables=[\"text\", \"PERSON\", \"LOC\", \"DATE\", \"ORG\"],\n",
+    "    input_variables=[\"text\", \"personen\", \"orte\", \"date\", \"organisationen\"],\n",
     "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
     ")\n",
     "human_message_prompt = HumanMessagePromptTemplate(prompt=human_prompt)\n",
@@ -1536,7 +1566,7 @@
     "chain = LLMChain(llm=model, prompt=chat_prompt)\n",
     "\n",
     "# Lade JSON-Datei mit den annotierten Sätzen\n",
-    "with open(\"relevant_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"data/json/sätze.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    input_data = json.load(f)\n",
     "\n",
     "results = []\n",
@@ -1546,11 +1576,11 @@
     "    result = chain.run(\n",
     "        entity_types=entity_types,\n",
     "        relation_types=relation_types,\n",
-    "        text=entry[\"Satz\"],\n",
-    "        PERSON=\", \".join(entry.get(\"PERSON\", [])),\n",
-    "        LOC=\", \".join(entry.get(\"LOC\", [])),\n",
-    "        DATE=\", \".join(entry.get(\"DATE\", [])),\n",
-    "        ORG=\", \".join(entry.get(\"ORG\", []))\n",
+    "        text=entry[\"text\"],\n",
+    "        personen=\", \".join(entry.get(\"personen\", [])),\n",
+    "        orte=\", \".join(entry.get(\"orte\", [])),\n",
+    "        date=\", \".join(entry.get(\"date\", [])),\n",
+    "        organisationen=\", \".join(entry.get(\"organisationen\", []))\n",
     "    )\n",
     "    results.append({\n",
     "        \"input\": entry,\n",
@@ -1558,7 +1588,7 @@
     "    })\n",
     "\n",
     "# Speichern der Ergebnisse\n",
-    "with open(\"extrahierte_relationen.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"data/json/extrahierte_relationen.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(results, f, ensure_ascii=False, indent=2)\n",
     "\n",
     "print(\"Extraktion abgeschlossen. Ergebnisse gespeichert in 'extrahierte_relationen.json'.\")\n"
